--- a/src/app/art-critic/art-critic.component.html
+++ b/src/app/art-critic/art-critic.component.html
@@ -13,7 +13,9 @@
         
         <div>
          
-            Что такое цифровая живопись и в каких жанрах она востребована? <a href="http://mediasvod.ru/tsifrovaya-zhivopis-primery-rabot-masterov-digital-painting-v-zhanre-kontsept-art/" target="_blank"> Ответ на этот вопрос можно найти по ссылке  </a> <br>
+            Что такое цифровая живопись и в каких жанрах она востребована?
+            <br>
+             <a href="http://mediasvod.ru/tsifrovaya-zhivopis-primery-rabot-masterov-digital-painting-v-zhanre-kontsept-art/" target="_blank"> Ответ на этот вопрос можно найти по ссылке  </a> <br>
          
         </div>      
         
@@ -50,7 +52,9 @@
     <div class="col-sm-12">
         
         <h5  style="color:blue;"> 2 этап </h5>
-            <div>Что подразумевает художник Юсуке Акамацу под термином "трансфигурация"? <a href="https://architime.ru/activity/2020/exhibition250320sovrhistory.htm" target="_blank"> Ответ на этот вопрос можно найти по ссылке  </a>
+            <div>Что подразумевает художник Юсуке Акамацу под термином "трансфигурация"?  
+                <br>              
+                 <a  href="https://architime.ru/activity/2020/exhibition250320sovrhistory.htm" target="_blank"> Ответ на этот вопрос можно найти по ссылке  </a>
             </div>
             
             <div *ngIf="!isSecondAnswerGiven" class="mt-2" >           
@@ -87,7 +91,9 @@
     <div class="col-sm-12">
     <h5  style="color:blue;"> 3 этап </h5>
     <div>
-        Опишите кратко принцип работы художника Яньцзюнь Чэн. <a href="https://docs.google.com/document/d/1wsg2FO5w2SqeGSRfmxhaZV005WIfLl3fWlQOMpehGiI/edit?usp=sharing" target="_blank"> Ответ на этот вопрос можно найти по ссылке  </a>
+        Опишите кратко принцип работы художника Яньцзюнь Чэн. 
+        <br>
+        <a   href="https://docs.google.com/document/d/1wsg2FO5w2SqeGSRfmxhaZV005WIfLl3fWlQOMpehGiI/edit?usp=sharing" target="_blank"> Ответ на этот вопрос можно найти по ссылке  </a>
     </div>
     </div>
 </div>
