--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,9 +1,9 @@
-
+<img src="assets/img/main1.jpg" class="img-fluid" alt="роль теоретик">
 <h3 class="mx-auto"> Веб-квест «Компьютерная графика»  </h3>
 
 <div>
-  Уважаемые обучающиеся!
-  Данный квест предназначен для изучения темы “Технология обработки графической информации”. Каждому из вас предстоит побывать в роли историка, теоретика, исследователя и искусствоведа. При выполнении заданий ролей, фиксируйте ответы в тетради или в текстовом документе. Чтобы ответить на поставленные вопросы, достаточно использовать ссылки, которые приведены на сайте. Желаю успеха!
+  <p> Уважаемые обучающиеся!  <br>
+  Данный квест предназначен для изучения темы “Технология обработки графической информации”. Каждому из вас предстоит побывать в роли историка, теоретика, исследователя и искусствоведа. При выполнении заданий ролей, фиксируйте ответы в тетради или в текстовом документе. Чтобы ответить на поставленные вопросы, достаточно использовать ссылки, которые приведены на сайте. Желаю успеха! </p>
 
 </div>
 
