--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,3 +39,14 @@
 
 
 </div>
+
+<footer class="footer" style="position: absolute;
+bottom: 0;
+width: 100%;
+height: 60px;
+line-height: 60px;
+">
+<div class="container">
+  <div class="col-xs-12 text-primary" style="text-align:right;">© 2021 Дариенко Марина Сергеевна</div>
+</div>
+</footer>
