--- a/src/app/researcher/researcher.component.html
+++ b/src/app/researcher/researcher.component.html
@@ -27,7 +27,7 @@
             Решите подобную задачу. Введите правильный ответ задачи и получите доступ к следующему заданию. 
 
             <div class="mt-2 alert-info">
-                Задача. Для хранения растрового изображения размером 64*32 пикселя отвели 1 килобайт памяти. Каково максимально возможное число цветов в палитре изображения?
+               <b>Задача. </b> Для хранения растрового изображения размером 64*32 пикселя отвели 1 килобайт памяти. Каково максимально возможное число цветов в палитре изображения?
 
             </div>
             
