--- a/src/app/theorist/theorist.component.html
+++ b/src/app/theorist/theorist.component.html
@@ -91,7 +91,7 @@
           </table>
     </div>
 
-    <div>
+    <div class="mt-2">
         <a href="http://xn--c1ajtfjx.xn--p1ai/kompyuternaya-grafika-vidy-kompyuternoj-grafiki/#:~:text=%D0%A0%D0%B0%D0%B7%D0%BB%D0%B8%D1%87%D0%B0%D1%8E%D1%82%20%D1%87%D0%B5%D1%82%D1%8B%D1%80%D0%B5%20%D0%B2%D0%B8%D0%B4%D0%B0%20%D0%BA%D0%BE%D0%BC%D0%BF%D1%8C%D1%8E%D1%82%D0%B5%D1%80%D0%BD%D0%BE%D0%B9%20%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D0%BA%D0%B8,%D0%B8%D0%BB%D0%B8%20%D0%BF%D1%80%D0%B8%20%D0%BF%D0%B5%D1%87%D0%B0%D1%82%D0%B8%20%D0%BD%D0%B0%20%D0%B1%D1%83%D0%BC%D0%B0%D0%B3%D0%B5" target="_blank"> 
         Для этого используйте материалы ссылки
         </a>
