--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -7,3 +7,10 @@
 
 </div>
 
+
+<div class="container mt-5">
+  <div class="col-xs-12 text-primary" style="text-align:right;">© 2021 Дариенко Марина Сергеевна</div>
+</div>
+
+
+
